--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.1.3",
+    "crypto": "^1.0.1",
     "node-fetch": "^3.2.10",
     "scryptlib": "^1.0.8"
   },
