--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "dependencies": {
     "axios": "^1.1.3",
+    "chai": "^4.3.7",
     "crypto": "^1.0.1",
     "node-fetch": "^3.2.10",
     "scryptlib": "^1.0.8"
   },
-  "type": "module"
+  "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "@types/jasmine": "^4.3.0",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.11.9",
+    "mocha": "^10.1.0"
+  }
 }
