--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
+  "name": "bsvdata",
+  "version": "1.0.1",
   "dependencies": {
     "axios": "^1.1.3",
     "chai": "^4.3.7",
     "crypto": "^1.0.1",
     "node-fetch": "^3.2.10",
-    "scryptlib": "^1.0.8"
+    "scryptlib": "^1.0.8",
+    "source-map-loader": "^4.0.1",
+    "ts-loader": "^9.4.1"
   },
   "devDependencies": {
     "@types/chai": "^4.3.3",
