--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.1.3",
   "dependencies": {
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "mongodb": "^4.12.1",
     "node-fetch": "^3.2.10",
     "scryptlib": "^1.0.8"
+  },
+  "bin": {
+    "newkey": "lib/newkey.mjs" 
   },
   "devDependencies": {
     "@types/node": "^18.11.9"
