--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "bsvdata",
-  "version": "1.1.3",
+  "version": "1.1.7",
   "dependencies": {
     "axios": "^1.1.3",
-    "dotenv": "^16.0.3",
     "mongodb": "^4.12.1",
     "node-fetch": "^3.2.10",
-    "scryptlib": "^1.0.8"
+    "scryptlib": "^1.0.8",
+    "dotenv": "^16.0.3"
+  },
+  "exports": {
+    ".": "./index.mjs"
   },
   "bin": {
-    "newkey": "lib/newkey.mjs" 
+    "genhdkey": "lib/newkey.mjs"
   },
   "devDependencies": {
     "@types/node": "^18.11.9"
